<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="@layout/app_bar_about"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:padding="10dp"
                android:contentDescription="@string/contentDescriptionLogo"
                android:src="@mipmap/logo" />

            <TextView
                android:id="@+id/lblAbout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:paddingTop="15dp"
                android:text="@string/app_name"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/app_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="email"
                android:gravity="center_horizontal"
                android:paddingBottom="10dp" />

            <TextView
                android:id="@+id/txtAboutDetails1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="email"
                android:gravity="center_horizontal"
                android:paddingBottom="10dp"
                android:text="@string/about_1" />

            <TextView
                android:id="@+id/txtAboutDetails2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:gravity="center_horizontal"
                android:paddingBottom="10dp"
                android:text="@string/about_2" />

            <TextView
                android:id="@+id/txtOpenSourceLicenses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="openSourceLicense"
                android:gravity="center_horizontal"
                android:textColor="@color/colorAccent"
                android:layout_gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/opensource_licenses"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="5dp"
                    android:contentDescription="@string/contentDescriptionLogo"
                    android:src="@drawable/mw_logo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/mw_credit" />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>
